Updates to include removal of eclipse specific files to track and ignoring IntelliJ files. Inclusion of jar files no longer on Maven to install. Name changes in POM files to be consistent and avoid duplication.

--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
     <version>0.1-SNAPSHOT</version>
     <packaging>jar</packaging>
 
-    <name>PhysicsToolkit</name>
+    <name>physicstoolkit</name>
     <url>https://github.com/mhschmieder/physicstoolkit </url>
     <description>Physics and acoustics classes for Java.</description>
 
